# Optimization-Product-Scheduling

./: .gitignore  Makefile  QUICKSTART.md  README.md  pip_install_log.txt  project structure.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.claude/: settings.local.json
configs/: default.yaml
mapso/: __init__.py  config.py  constants.py
mapso/agents/: base.py  capacity_machine.py  changeover_sequence.py  orchestrator.py
mapso/core/: constraints.py  enums.py  models.py  objectives.py
mapso/data/: generator.py  loader.py
mapso/evaluation/: metrics.py
mapso/optimization/: base_optimizer.py  layer1_cpsat.py  objective_function.py
mapso/utils/: logging_config.py
scripts/: run_optimization.py
